--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+/.vs/ProjectEvaluation/sdtreactapi.metadata.v6.1
+/.vs/ProjectEvaluation/sdtreactapi.projects.v6.1
