namespaces fixed and now only thing is to merge react

--- a/SdtReactApi/appsettings.json
+++ b/SdtReactApi/appsettings.json
@@ -1,10 +1,18 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "ConnectionStrings": {
+    "IdentityDBLocal": "Server=LAPTOP-RLHH2AOR\\SQLEXPRESS;Database=api; User ID=sa;Password=admin@123;"
+  },
+  "JWT": {
+    "ValidAudience": "https://localhost:44481/",
+    "ValidIssuer": "https://localhost:44481/",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  },
+  "AllowedHosts": "*"
 }
