--- a/SdtReactApi/ClientApp/package.json
+++ b/SdtReactApi/ClientApp/package.json
@@ -1,64 +1,40 @@
 {
-  "name": "sdtreactapi",
+  "name": "smartdust-react-poc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "http-proxy-middleware": "^2.0.6",
-    "jquery": "^3.6.0",
-    "merge": "^2.1.1",
-    "oidc-client": "^1.11.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/joy": "^5.0.0-alpha.86",
+    "@mui/material": "^5.13.7",
+    "@mui/x-date-pickers": "^6.9.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-bootstrap": "^0.26.1",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^4.0.3",
-    "reactstrap": "^9.1.1",
-    "rimraf": "^3.0.2",
-    "web-vitals": "^2.1.4",
-    "workbox-background-sync": "^6.5.3",
-    "workbox-broadcast-update": "^6.5.3",
-    "workbox-cacheable-response": "^6.5.3",
-    "workbox-core": "^6.5.3",
-    "workbox-expiration": "^6.5.3",
-    "workbox-google-analytics": "^6.5.3",
-    "workbox-navigation-preload": "^6.5.3",
-    "workbox-precaching": "^6.5.3",
-    "workbox-range-requests": "^6.5.3",
-    "workbox-routing": "^6.5.3",
-    "workbox-strategies": "^6.5.3",
-    "workbox-streams": "^6.5.3"
-  },
-  "devDependencies": {
-    "ajv": "^8.11.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.18.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.25.3",
-    "nan": "^2.16.0",
-    "typescript": "^4.7.4"
-  },
-  "overrides": {
-    "autoprefixer": "10.4.5"
-  },
-  "resolutions": {
-    "css-what": "^5.0.1",
-    "nth-check": "^3.0.1"
+    "react-icons": "^4.8.0",
+    "react-iframe": "^1.8.5",
+    "react-router-dom": "^6.11.1",
+    "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "prestart": "node aspnetcore-https && node aspnetcore-react",
-    "start": "rimraf ./build && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
