--- a/SdtReactApi/appsettings.json
+++ b/SdtReactApi/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "IdentityDBLocal": "Server=LAPTOP-RLHH2AOR\\SQLEXPRESS;Database=api; User ID=sa;Password=admin@123;"
+    "IdentityDBLocal": "Server=LAPTOP-23P7MT56\\SQLEXPRESS;Database=api; User ID=sa;Password=admin;"
   },
   "JWT": {
     "ValidAudience": "https://localhost:44481/",
