--- a/SdtReactApi/appsettings.json
+++ b/SdtReactApi/appsettings.json
@@ -14,5 +14,28 @@
     "ValidIssuer": "https://localhost:44481/",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Smtp": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "FromAddress": "yashrajsmartdust@gmail.com",
+    "UserName": "yashrajsmartdust@gmail.com",
+    "Password": "nkydycdykztunbob"
+  },
+
+  "GoogleCloudStorage": {
+    "PrefixLink": "https://drive.google.com/uc?export=view&id=",
+    "DowloadItem": "https://drive.google.com/uc?export=download&id=",
+    "PostFix": ""
+  },
+  "TestingAndCalibrationSurvey": {
+    "UserTemplate": "emailformat/TestingAndCalibrationsSurveyMailTemplate.html",
+    "SendDataMailLink": "emailformat/TestReportTemplate.html",
+    "Mobile": "+91-91000-00001",
+    "emailID": "abc@hotmail.com",
+    "Subject": "User Details",
+    "LogoImage": "https://drive.google.com/uc?export=view&id=1kezy9XtIkZdY7X1MieQuTft1PZHYtrfP",
+    "BodyImage": "https://drive.google.com/uc?export=view&id=1XPUvUQiS9BwvxPbYshUWRYTTZ2_G6v8z"
+  }
 }
