--- a/SdtReactApi/appsettings.json
+++ b/SdtReactApi/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "IdentityDBLocal": "Server=testdb.cjpggr2avcvt.us-east-1.rds.amazonaws.com,1433;Database=sdtapp; User ID=sa;Password=test;"
+    "IdentityDBLocal": "Server=LAPTOP-23P7MT56\\SQLEXPRESS;Database=api; User ID=sa;Password=admin;"
   },
   "JWT": {
     "ValidAudience": "https://localhost:44481/",
