Email is getting sent to the Manager Succesfully
Email is getting sent to the Manager Succesfully

--- a/SdtReactApi/appsettings.json
+++ b/SdtReactApi/appsettings.json
@@ -37,5 +37,8 @@
     "Subject": "User Details",
     "LogoImage": "https://drive.google.com/uc?export=view&id=1kezy9XtIkZdY7X1MieQuTft1PZHYtrfP",
     "BodyImage": "https://drive.google.com/uc?export=view&id=1XPUvUQiS9BwvxPbYshUWRYTTZ2_G6v8z"
+  },
+  "SmartdustAppLeave": {
+    "ManagerTemplate": "emailformat/LeaveManagerMailTemplate.html"
   }
 }
