Getting Employee Leaves added for manager api and js table also and added update Leave status for Managers also
Getting Employee Leaves added for manager api and js table also and added update Leave status for Managers also

--- a/SdtReactApi/SmartdustApp.Web.csproj
+++ b/SdtReactApi/SmartdustApp.Web.csproj
@@ -37,6 +37,10 @@
     <ProjectReference Include="..\SmartdustApp.Business\SmartdustApp.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\src\Pages\Leaves\LeaveDashboard\LeaveDashboardComponents\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
