Getting the Role ID while login and also the email is getting sent to the employee mail
Getting the Role ID while login and also the email is getting sent to the employee mail

--- a/SdtReactApi/appsettings.json
+++ b/SdtReactApi/appsettings.json
@@ -39,6 +39,7 @@
     "BodyImage": "https://drive.google.com/uc?export=view&id=1XPUvUQiS9BwvxPbYshUWRYTTZ2_G6v8z"
   },
   "SmartdustAppLeave": {
-    "ManagerTemplate": "emailformat/LeaveManagerMailTemplate.html"
+    "ManagerTemplate": "emailformat/LeaveManagerMailTemplate.html",
+    "EmployeeTemplate": "emailformat/EmployeeMailTemplate.html"
   }
 }
