Leave/Absence Added in Navbar
Leave/Absence Added in Navbar

--- a/SdtReactApi/SmartdustApp.Web.csproj
+++ b/SdtReactApi/SmartdustApp.Web.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\components\AbsenceMenu\" />
     <Folder Include="ClientApp\src\Pages\Leaves\LeaveDashboard\LeaveDashboardComponents\" />
   </ItemGroup>
 
