Delete Component added for the crud
Delete Component added for the crud

--- a/SdtReactApi/SmartdustApp.Web.csproj
+++ b/SdtReactApi/SmartdustApp.Web.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Folder Include="ClientApp\src\components\AbsenceMenu\" />
     <Folder Include="ClientApp\src\components\GridTable\" />
+    <Folder Include="ClientApp\src\components\DeleteComponent\" />
     <Folder Include="ClientApp\src\Pages\Leaves\LeaveBalance\LeaveBalanceComponents\" />
     <Folder Include="ClientApp\src\Pages\Leaves\LeaveDashboard\LeaveDashboardComponents\" />
   </ItemGroup>
