--- a/SdtReactApi/SmartdustApp.Web.csproj
+++ b/SdtReactApi/SmartdustApp.Web.csproj
@@ -39,8 +39,8 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\components\AbsenceMenu\" />
+    <Folder Include="ClientApp\src\components\DeleteComponent\__tests__\" />
     <Folder Include="ClientApp\src\components\GridTable\" />
-    <Folder Include="ClientApp\src\components\DeleteComponent\" />
     <Folder Include="ClientApp\src\Pages\Leaves\LeaveBalance\LeaveBalanceComponents\" />
     <Folder Include="ClientApp\src\Pages\Leaves\LeaveDashboard\LeaveDashboardComponents\" />
     <Folder Include="ClientApp\src\Pages\UnauthorizedPage\" />
